--- a/test.css
+++ b/test.css
@@ -1,4 +1,7 @@
-
+body{
+    font-family: "Gill Sans", sans-serif;
+}
+/*----------------------------------------------ENTÊTE----------------------------------------------*/
 .header{
     margin-top: 30px;
     margin-left: -150px;
@@ -12,7 +15,9 @@ nav::after{
         position:absolute;
         left:calc(21% - 10%);
         border-bottom:-5px;
-        margin-top: 20px;
+        margin-top: 15px;
+        position: fixed;
+      
 
 }
 nav ul li{
@@ -20,17 +25,20 @@ nav ul li{
     display: inline-block;
     padding: 1% ;
     color: black;
-
+  
 }
 ul li a{
     color: rgba(158, 131, 131, 0.767);
     text-decoration: none;
     width: 100px ;
     height: 100px ;
+    padding-top: 0px;
 }
 ul {
     padding-left: 30%;
+    margin-top: -30px;
 }
+
 
 ul li a:hover{
     color: black;  
@@ -46,6 +54,71 @@ ul li a:hover{
 .logo_sneakers{
     float: left;
     padding-left: 18%;
-    padding-top: 10px;
+    padding-top:1% ;
+    
  
+}
+.panier{
+    padding-left: 60%;
+    padding-top: 1%;
+    
+}
+
+/* --------------------------------------------TEXT-------------------------------------------- */
+.text{
+    float: right;
+    margin-top: 7%;
+    margin-right: 16%;
+}
+#text1{
+    color:  hsl(26, 100%, 55%);
+    font-size: 150%;
+    font-weight: bold;
+}
+#text2{
+    font-size: 250%;
+    font-weight: bold;
+   
+}
+#text3{
+    color: rgba(158, 131, 131, 0.767);
+    font-family: "Gill Sans", sans-serif;
+}
+.prix{
+    display: flex;
+}
+.p1{
+    font-size: 150%;
+    font-weight: bold;
+   height: 0%;
+   width: 0%;
+}
+.p2{
+ 
+    font-weight: bold;
+    color:hsl(26, 100%, 55%);
+    background-color: hsl(25, 100%, 94%);
+    height: 20px;
+    width: 40px;
+    margin-top: 6%;
+    margin-left: 13%;
+    padding-left: 3%;
+    padding-right: -2%;
+    padding-top: 1%;
+    padding-bottom: 0%;
+    border-radius: 17%;
+ 
+    
+}
+.p3{
+    text-decoration:  line-through ;
+    color: rgba(158, 131, 131, 0.767);
+    width: 50px;
+    margin-bottom: 0%;
+    padding-top:12% ;
+  
+}
+
+.button_add{
+    margin-right: 0%;
 }
