--- a/test.css
+++ b/test.css
@@ -16,7 +16,7 @@ nav::after{
         left:calc(21% - 10%);
         border-bottom:-5px;
         margin-top: 15px;
-        position: fixed;
+
       
 
 }
@@ -59,7 +59,7 @@ ul li a:hover{
  
 }
 .panier{
-    padding-left: 60%;
+    padding-left: 59%;
     padding-top: 1%;
     
 }
@@ -69,6 +69,8 @@ ul li a:hover{
     float: right;
     margin-top: 7%;
     margin-right: 16%;
+    height: 500px;
+    margin-bottom: 0%;
 }
 #text1{
     color:  hsl(26, 100%, 55%);
@@ -119,6 +121,145 @@ ul li a:hover{
   
 }
 
-.button_add{
-    margin-right: 0%;
+.flex-centre {
+    display: flex;
+    align-items: center;
+    margin-top: 6%;
+    
+  }
+
+  
+.bouton-add {
+  background-color:#ee4e04;
+  background-image: linear-gradient(#ee4e04 0, #e94a00 100%);
+  border-radius: 10px;
+  border-style: none;
+  box-shadow: rgba(245, 244, 247, .25) 0 1px 1px inset;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: bold;
+  font-size: 16px;
+  height: 60px;
+  line-height: 60px;
+  margin-left: -4px;
+  outline: 0;
+  text-align: center;
+  transition: all .3s cubic-bezier(.05, .03, .35, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: bottom;
+  width: 255px;
+  
 }
+.bouton-add {
+  opacity: .7;
+}
+
+@media screen and (max-width: 1000px) {
+  .bouton-add {
+    font-size: 14px;
+    height: 55px;
+    line-height: 55px;
+    width: 150px;
+  }
+}
+.bouton-c-add{
+    margin-left: 15px;
+
+}
+.img-add{
+    height: 15px;
+    width: 15px;
+    font-weight: bold;
+}
+#counter {
+    position: absolute;
+    margin-top: 10px;
+    margin-right: -30px;
+    border-radius: 10px;
+    min-width: auto;
+    min-height: auto;
+    padding: 1px;
+    background-color: red;
+    color: white;
+  }
+/* -- quantity box -- */
+
+.quantity {
+ display: inline-block; }
+
+.quantity .input-text.qty {
+ width: 35px;
+
+ padding: 0 5px;
+ text-align: center;
+ background-color: transparent;
+
+ margin-left: -10px;
+ font-weight: bold;
+}
+
+.quantity.buttons_added {
+ text-align: left;
+ position: relative;
+ white-space: nowrap;
+ vertical-align: top;
+ width: 125px;
+ height: 40px;
+ background-color: rgb(228, 225, 215);
+ border-radius: 9%;
+
+}
+
+.quantity.buttons_added input {
+ display: inline-block;
+ margin: 0;
+ vertical-align: top;
+ box-shadow: none;
+}
+
+
+.quantity.buttons_added .plus {
+ margin-top: -12px;
+ margin-left: 40%;
+ margin-right: 6px;
+
+ cursor:pointer;
+ width: 10px;
+ height: 10px;
+ float: right;
+}
+.quantity.buttons_added .minus{
+    width: 10px;
+    height: 4px;
+    padding-top: 19px;
+    margin-left: 9px;
+}
+
+.quantity.buttons_added .minus {
+ border-right: 0; }
+
+.quantity.buttons_added .plus {
+ border-left: 0; }
+
+.quantity input::-webkit-outer-spin-button,
+.quantity input::-webkit-inner-spin-button {
+ -webkit-appearance: none;
+ -moz-appearance: none;
+ margin: 0; }
+ 
+ .quantity.buttons_added .minus:focus,
+.quantity.buttons_added .plus:focus {
+ outline: none;
+ }
+
+ .input-text.qty.text{
+   margin-top: 14px;
+    height: 13px;
+    width: 10px;
+    margin-right: 53px;
+    border: transparent;
+ }
+/* --------------------------------image-------------------------------- */
